Making new plans

--- a/todo.html
+++ b/todo.html
@@ -47,6 +47,12 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><label><input type="checkbox" />Write productivity software
+web-based</label></li>
+<li><label><input type="checkbox" />Write a drawing program like
+DX-Paint https://www.datagubbe.se/dpaint</label></li>
+</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
