Added a new item and removed done items

--- a/todo.html
+++ b/todo.html
@@ -48,10 +48,8 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" />Write productivity software
-web-based</label></li>
-<li><label><input type="checkbox" />Write a drawing program like
-DX-Paint https://www.datagubbe.se/dpaint</label></li>
+<li><label><input type="checkbox" />Look through old
+notebooks</label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
@@ -61,15 +59,11 @@ id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-rem
 time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" checked="" />Take Paulius to Lier or
-change plan</label></li>
-<li><label><input type="checkbox" checked="" />Go to
-dentist</label></li>
+<li><label><input type="checkbox" />Write productivity software
+web-based</label></li>
+<li><label><input type="checkbox" />Write a drawing program like
+DX-Paint https://www.datagubbe.se/dpaint</label></li>
 <li><label><input type="checkbox" />Help Paul with RTS</label></li>
-<li><label><input type="checkbox" checked="" />Help Erik with
-coding</label></li>
-<li><label><input type="checkbox" checked="" />Go to inspection meeting
-on Thursday</label></li>
 <li><label><input type="checkbox" />Retrieve flash card from
 Håvard</label></li>
 <li><label><input type="checkbox" />Begin learning about databases and
