Added some items to todo list

--- a/todo.html
+++ b/todo.html
@@ -49,12 +49,16 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Look through old notebooks</li>
+Consider sandsi project</li>
+<li><input type="checkbox" disabled="" />
+Consider <a href="https://tailwindcss.com">https://tailwindcss.com</a></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Look through old notebooks</li>
 <li><input type="checkbox" disabled="" />
 Write productivity software web-based</li>
 <li><input type="checkbox" disabled="" />
