Added dog walking game to my list

--- a/todo.html
+++ b/todo.html
@@ -49,6 +49,8 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
+Make dog walking game</li>
+<li><input type="checkbox" disabled="" />
 Consider sandsi project</li>
 <li><input type="checkbox" disabled="" />
 Consider <a href="https://tailwindcss.com">https://tailwindcss.com</a></li>
