Added more to list

--- a/todo.html
+++ b/todo.html
@@ -49,11 +49,19 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Make dog walking game</li>
+Make dog walking game, Dogorama</li>
 <li><input type="checkbox" disabled="" />
 Consider sandsi project</li>
 <li><input type="checkbox" disabled="" />
+Make interesting 2D platformer</li>
+<li><input type="checkbox" disabled="" />
 Consider <a href="https://tailwindcss.com">https://tailwindcss.com</a></li>
+<li><input type="checkbox" disabled="" />
+Til5 trauma centre</li>
+<li><input type="checkbox" disabled="" />
+Car game</li>
+<li><input type="checkbox" disabled="" />
+Piano game</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
@@ -64,7 +72,7 @@ Look through old notebooks</li>
 <li><input type="checkbox" disabled="" />
 Write productivity software web-based</li>
 <li><input type="checkbox" disabled="" />
-Write a drawing program like DX-Paint https://www.datagubbe.se/dpaint</li>
+Write a drawing program like DX-Paint <a href="https://www.datagubbe.se/dpaint">https://www.datagubbe.se/dpaint</a></li>
 <li><input type="checkbox" disabled="" />
 Help Paul with RTS</li>
 <li><input type="checkbox" disabled="" />
