Added a book to consider

--- a/todo.html
+++ b/todo.html
@@ -62,6 +62,8 @@ Til5 trauma centre</li>
 Car game</li>
 <li><input type="checkbox" disabled="" />
 Piano game</li>
+<li><input type="checkbox" disabled="" />
+Consider <a href="https://www.amazon.com/Unix-Network-Programming-Sockets-Networking/dp/0131411551">https://www.amazon.com/Unix-Network-Programming-Sockets-Networking/dp/0131411551</a></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
