--- a/todo.html
+++ b/todo.html
@@ -64,6 +64,8 @@ Car game</li>
 Piano game</li>
 <li><input type="checkbox" disabled="" />
 Consider <a href="https://www.amazon.com/Unix-Network-Programming-Sockets-Networking/dp/0131411551">https://www.amazon.com/Unix-Network-Programming-Sockets-Networking/dp/0131411551</a></li>
+<li><input type="checkbox" disabled="" />
+Consider <a href="https://beej.us/guide/bgnet/">https://beej.us/guide/bgnet/</a></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
