Added another item to list

--- a/todo.html
+++ b/todo.html
@@ -61,6 +61,8 @@ Go to inspection meeting on Thursday</li>
 <li><input type="checkbox" disabled="" />
 Retrieve flash card from Håvard</li>
 <li><input type="checkbox" disabled="" />
+Model chess pieces as practice</li>
+<li><input type="checkbox" disabled="" />
 Begin learning about databases and look at <a href="https://studiekatalog.edutorium.no/inn/en/course/2DAN101/2024-autumn">Databases and Networks</a></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
