Properly fixed a merge

--- a/todo.html
+++ b/todo.html
@@ -47,7 +47,42 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
-<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD * [ ] Take Paulius to Lier or change plan * [ ] Go to dentist * [ ] Help Paul with RTS * [x] Help Erik with coding * [ ] Go to inspection meeting on Thursday * [ ] Retrieve flash card from Håvard * [ ] Model chess pieces as practice * [ ] Begin learning about databases and look at <a href="https://studiekatalog.edutorium.no/inn/en/course/2DAN101/2024-autumn">Databases and Networks</a> ======= * [ ] Make dog walking game, Dogorama * [ ] Consider sandsi project * [ ] Make interesting 2D platformer * [ ] Consider <a href="https://tailwindcss.com">https://tailwindcss.com</a> * [ ] Til5 trauma centre * [ ] Car game * [ ] Piano game * [ ] Consider <a href="https://www.amazon.com/Unix-Network-Programming-Sockets-Networking/dp/0131411551">https://www.amazon.com/Unix-Network-Programming-Sockets-Networking/dp/0131411551</a> * [ ] Consider <a href="https://beej.us/guide/bgnet/">https://beej.us/guide/bgnet/</a> &gt;&gt;&gt;&gt;&gt;&gt;&gt; 937aec1cc94494970febae6aef1bbf5694222367</p>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Take Paulius to Lier or change plan</li>
+<li><input type="checkbox" disabled="" />
+Go to dentist</li>
+<li><input type="checkbox" disabled="" />
+Help Paul with RTS</li>
+<li><input type="checkbox" disabled="" checked="" />
+Help Erik with coding</li>
+<li><input type="checkbox" disabled="" />
+Go to inspection meeting on Thursday</li>
+<li><input type="checkbox" disabled="" />
+Retrieve flash card from Håvard</li>
+<li><input type="checkbox" disabled="" />
+Model chess pieces as practice</li>
+<li><input type="checkbox" disabled="" />
+Begin learning about databases and look at <a href="https://studiekatalog.edutorium.no/inn/en/course/2DAN101/2024-autumn">Databases and Networks</a></li>
+<li><input type="checkbox" disabled="" />
+Make dog walking game, Dogorama</li>
+<li><input type="checkbox" disabled="" />
+Consider sandsi project</li>
+<li><input type="checkbox" disabled="" />
+Make interesting 2D platformer</li>
+<li><input type="checkbox" disabled="" />
+Consider <a href="https://tailwindcss.com">https://tailwindcss.com</a></li>
+<li><input type="checkbox" disabled="" />
+Til5 trauma centre</li>
+<li><input type="checkbox" disabled="" />
+Car game</li>
+<li><input type="checkbox" disabled="" />
+Piano game</li>
+<li><input type="checkbox" disabled="" />
+Consider <a href="https://www.amazon.com/Unix-Network-Programming-Sockets-Networking/dp/0131411551">https://www.amazon.com/Unix-Network-Programming-Sockets-Networking/dp/0131411551</a></li>
+<li><input type="checkbox" disabled="" />
+Consider <a href="https://beej.us/guide/bgnet/">https://beej.us/guide/bgnet/</a></li>
+</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
