Added another item

--- a/todo.html
+++ b/todo.html
@@ -49,6 +49,8 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
+Register for all exams innlandet</li>
+<li><input type="checkbox" disabled="" />
 Take Paulius to Lier or change plan</li>
 <li><input type="checkbox" disabled="" />
 Go to dentist</li>
