Removed som duplicated items, added some notes to todo list

--- a/todo.html
+++ b/todo.html
@@ -50,28 +50,16 @@
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Register for all exams innlandet</li>
-<li><input type="checkbox" disabled="" />
-Take Paulius to Lier or change plan</li>
-<li><input type="checkbox" disabled="" />
-Go to dentist</li>
-<li><input type="checkbox" disabled="" />
-Help Paul with RTS</li>
 <li><input type="checkbox" disabled="" checked="" />
 Help Erik with coding</li>
 <li><input type="checkbox" disabled="" />
-Go to inspection meeting on Thursday</li>
-<li><input type="checkbox" disabled="" />
-Retrieve flash card from Håvard</li>
-<li><input type="checkbox" disabled="" />
 Model chess pieces as practice</li>
-<li><input type="checkbox" disabled="" />
-Begin learning about databases and look at <a href="https://studiekatalog.edutorium.no/inn/en/course/2DAN101/2024-autumn">Databases and Networks</a></li>
 <li><input type="checkbox" disabled="" />
 Make dog walking game, Dogorama</li>
 <li><input type="checkbox" disabled="" />
 Consider sandsi project</li>
 <li><input type="checkbox" disabled="" />
-Make interesting 2D platformer</li>
+Make interesting 2D platformer, parallax scrolling, pixel art of prerend?</li>
 <li><input type="checkbox" disabled="" />
 Consider <a href="https://tailwindcss.com">https://tailwindcss.com</a></li>
 <li><input type="checkbox" disabled="" />
