Added important item to inbox

--- a/todo.html
+++ b/todo.html
@@ -47,7 +47,12 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
+<h1 id="action">Action</h1>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Solve shared uniforms memory problem in solid</li>
 <li><input type="checkbox" disabled="" />
 Register for all exams innlandet</li>
 <li><input type="checkbox" disabled="" />
@@ -70,11 +75,6 @@ Piano game</li>
 Consider <a href="https://www.amazon.com/Unix-Network-Programming-Sockets-Networking/dp/0131411551">https://www.amazon.com/Unix-Network-Programming-Sockets-Networking/dp/0131411551</a></li>
 <li><input type="checkbox" disabled="" />
 Consider <a href="https://beej.us/guide/bgnet/">https://beej.us/guide/bgnet/</a></li>
-</ul>
-<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
-<h1 id="action">Action</h1>
-<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
-<ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Figure out why there is a ogl warning every time a texture is used for a drawable and see if is the reason performance is hampered when using fpscounter and if fixing it will make the webassembly build start working</li>
 <li><input type="checkbox" disabled="" />
