Added Ravi's lovely course

--- a/todo.html
+++ b/todo.html
@@ -50,6 +50,8 @@
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Make a marble game</li>
+<li><input type="checkbox" disabled="" />
+Learn to sit and hold a classical guitar</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
@@ -85,8 +87,6 @@ Consider <a href="https://beej.us/guide/bgnet/">https://beej.us/guide/bgnet/</a>
 Figure out why there is a ogl warning every time a texture is used for a drawable and see if is the reason performance is hampered when using fpscounter and if fixing it will make the webassembly build start working</li>
 <li><input type="checkbox" disabled="" />
 Look through old notebooks</li>
-<li><input type="checkbox" disabled="" />
-Write productivity software web-based</li>
 <li><input type="checkbox" disabled="" />
 Write a drawing program like DX-Paint <a href="https://www.datagubbe.se/dpaint">https://www.datagubbe.se/dpaint</a></li>
 <li><input type="checkbox" disabled="" />
@@ -280,7 +280,13 @@ Complete Blender Character Creator v2.0 for Video Games Design Course</li>
 <li><input type="checkbox" disabled="" />
 Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
 <li><input type="checkbox" disabled="" />
+Complete Computer Graphics II: Rendering # deadline: Dec 16, 2024</li>
+<li><input type="checkbox" disabled="" />
+Make solid work with browser and ios+andriod</li>
+<li><input type="checkbox" disabled="" />
 Do drawabox.com course</li>
+<li><input type="checkbox" disabled="" />
+Write productivity software web-based</li>
 <li><input type="checkbox" disabled="" />
 Learn to make music <a href="https://learningmusic.ableton.com">https://learningmusic.ableton.com</a></li>
 <li><input type="checkbox" disabled="" />
@@ -486,6 +492,10 @@ Exam Programming II -&gt; 21.05.2024 #programming</li>
                 cal.colorfulSelect('13/5/2024', 'jsCalendar-colorful-orange');
                 //cal.colorfulSelect('13/5/2024', 'jsCalendar-colorful-red');
                 cal.colorfulSelect('21/5/2024', 'jsCalendar-colorful-green');
+                }
+                if (month == 12)
+                {
+                cal.colorfulSelect('16/12/2024', 'jsCalendar-colorful-red');
                 }
             }
 
