Added week column to all calendars

--- a/todo.html
+++ b/todo.html
@@ -540,6 +540,8 @@ addWeekColumn(2);
 addWeekColumn(3);
 addWeekColumn(4);
 addWeekColumn(5);
+addWeekColumn(6);
+addWeekColumn(7);
 
 addWeekNumber(1, 1, 22);
 addWeekNumber(1, 2, 23);
