Added one of Ravi's websites to my list

--- a/todo.html
+++ b/todo.html
@@ -333,7 +333,7 @@ Exam Programming II -&gt; 21.05.2024 #programming</li>
 <li>Learning Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">https://paroj.github.io/gltut/</a></li>
 <li>Choosing Ruby On Rails For Your Next Web Development Project <a href="https://www.ideamotive.co/ruby-on-rails/guide">https://www.ideamotive.co/ruby-on-rails/guide</a></li>
 <li>Read <a href="https://stanforddatascience.github.io/best-practices/study-design-phase.html#define-the-research-question">https://stanforddatascience.github.io/best-practices/study-design-phase.html#define-the-research-question</a></li>
-<li>Read <a href="http://jeffe.cs.illinois.edu/teaching/algorithms/?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books">http://jeffe.cs.illinois.edu/teaching/algorithms/?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books</a></li>
+<li>Read <a href="http://jeffe.cs.illinois.edu/teaching/algorithms/?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books">http://jeffe.cs.illinois.edu/teaching/algorithms/?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books</a> Consider <a href="https://cseweb.ucsd.edu//~viscomp/classes/cse168/sp20/schedule.html">https://cseweb.ucsd.edu//~viscomp/classes/cse168/sp20/schedule.html</a></li>
 </ul>
 <h1 id="dreams">Dreams</h1>
 <h6 id="goals-i-might-get-around-to-some-day">Goals I might get around to some day</h6>
