Wrote some new projects onto todo list

--- a/todo.html
+++ b/todo.html
@@ -49,9 +49,9 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Make a marble game</li>
+Make the solar system in solid</li>
 <li><input type="checkbox" disabled="" />
-Learn to sit and hold a classical guitar</li>
+Make an audio visualizer in solid</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
@@ -59,6 +59,10 @@ Learn to sit and hold a classical guitar</li>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Redesign shared uniforms solid</li>
+<li><input type="checkbox" disabled="" />
+Make a marble game</li>
+<li><input type="checkbox" disabled="" />
+Learn to sit and hold a classical guitar</li>
 <li><input type="checkbox" disabled="" />
 Solve shared uniforms memory problem in solid</li>
 <li><input type="checkbox" disabled="" />
