Finished an item

--- a/todo.html
+++ b/todo.html
@@ -93,7 +93,7 @@ Figure out why there is a ogl warning every time a texture is used for a drawabl
 Look through old notebooks</li>
 <li><input type="checkbox" disabled="" />
 Write a drawing program like DX-Paint <a href="https://www.datagubbe.se/dpaint">https://www.datagubbe.se/dpaint</a></li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Help Paul with RTS</li>
 <li><input type="checkbox" disabled="" />
 Retrieve flash card from Håvard</li>
